# oxideav-bmp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: fuzz.yml
benches/: decode.rs  encode.rs  roundtrip.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bitfields_roundtrip.rs  decode.rs  encode_roundtrip.rs  metadata.rs  rle_stream.rs
src/: container.rs  decoder.rs  encoder.rs  error.rs  image.rs  lib.rs  metadata.rs  registry.rs  types.rs
tests/: magick_validate.rs  malformed_inputs.rs
