[package]
name = "oxideav-bmp"
version = "0.1.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-bmp"
homepage = "https://github.com/OxideAV/oxideav-bmp"
authors = ["Mark Karpeles"]
description = "Pure-Rust BMP (Windows bitmap) decoder + encoder + container for oxideav — also exposes the header-less DIB helpers used by .ico / .cur sub-images"
readme = "README.md"
keywords = ["multimedia", "image", "bmp", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-bmp` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes the standalone
# `decode_bmp` / `encode_bmp` / `decode_dib` / `encode_dib` API plus
# crate-local `BmpImage` / `BmpError` / `BmpPixelFormat` types and
# never references `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }

[features]
default = ["registry"]

# Wires up the codec / encoder / decoder / container demuxer + muxer
# trait implementations against `oxideav-core` so the crate can plug
# into the `oxideav` framework registry. Default-on; turn off for
# image-library use-cases that just want the standalone `decode_bmp`
# / `decode_dib` API.
registry = ["dep:oxideav-core"]
