[package]
name = "oxideav-bmp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# BMP's decoder is the rich fuzz surface: a 14-byte BITMAPFILEHEADER plus
# one of several DIB header variants (OS/2 BITMAPCOREHEADER, v3
# BITMAPINFOHEADER, v4/v5 with embedded bitfield masks), then an optional
# colour table and a pixel array that may be raw, bit-packed, bitfield-
# masked, or RLE4/RLE8-compressed — top-down or bottom-up. Every one of
# those header fields (width / height / bpp / compression / clr_used /
# bfOffBits / channel masks) is attacker-controlled and feeds offset and
# allocation maths. There is no external system library worth pulling in
# as a cross-decode oracle (and the clean-room wall bars the C references
# anyway), so the decoder-side harnesses are panic-only: feed arbitrary
# bytes to the public decode entry points and assert they always return a
# `Result` rather than panicking / aborting / OOMing.
#
# The encoder side is exercised by `encode_roundtrip`, which drives the
# encoder with fuzzer-controlled pixels / palette / options and then
# decodes the output back to assert no-panic plus, for the direct-colour
# formats, byte-level roundtrip equality.
#
# Built with `default-features = false` so the harnesses exercise the
# framework-free standalone code paths (crate-local `BmpError`), with no
# `oxideav-core` in the dependency tree.
[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-bmp]
path = ".."
default-features = false

# Prevent this from interfering with the umbrella workspace.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

# Focused fuzz target — narrows the input to "everything past the BMP
# headers is RLE pixel payload" so libfuzzer spends its iteration budget
# on the BI_RLE8 / BI_RLE4 state machines (encoded runs, EOL/EOB/delta
# escapes, absolute-mode + word-pad) rather than re-discovering valid
# 14-byte BITMAPFILEHEADERs. Same panic-free contract as `decode`.
[[bin]]
name = "rle_stream"
path = "fuzz_targets/rle_stream.rs"
test = false
doc = false

# Encoder-roundtrip target — drives the encoder with fuzzer-controlled
# pixels / palette / options, then decodes the output. Closes the
# symmetry with the two decoder-side targets: exercises the encoder's
# allocation / padding / RLE-fallback / minimal-palette / top-down
# code paths. Direct-colour inputs (Rgba / Rgb24) additionally assert
# the decoded pixels match the encoded ones byte for byte; indexed and
# Rgb565 paths are panic-checked only (lossy by construction).
# Geometry is capped at 64×64 px per iteration so the harness stays
# well under the libfuzzer rss-limit budget even for the worst-case
# 4 B/px Rgba layout.
[[bin]]
name = "encode_roundtrip"
path = "fuzz_targets/encode_roundtrip.rs"
test = false
doc = false
